Fix button alignment

--- a/publishing/static/publishing/scss/_publishing.scss
+++ b/publishing/static/publishing/scss/_publishing.scss
@@ -44,6 +44,6 @@ table.queued-envelopes .icon-begin-processing {
     vertical-align: middle;
 }
 
-button.pause-queue-button {
+button.pause-queue-button, button.unpause-queue-button{
   float: right;
 }
